--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
+    "firebase-admin": "^11.0.1",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   },
